--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Patika Frontend Bootcamp</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>Patika.dev React Bootcamp</h1>
 </body>
 </html>
